# FireBot

./: Dockerfile  PROMPT.md  README.md  docker-compose.yml  fix_plan.md  modular_paper_trading_bot_prd.md  progress.json  pyproject.toml  status.json
configs/: prometheus.yml
specs/: requirements.md
src/firebot/: __init__.py
src/firebot/aggregation/: __init__.py  aggregator.py
src/firebot/backtesting/: __init__.py  engine.py  forward.py
src/firebot/core/: __init__.py  config.py  models.py
src/firebot/data/: __init__.py
src/firebot/data/sources/: __init__.py  base.py  csv_source.py
src/firebot/execution/: __init__.py  engine.py  portfolio.py
src/firebot/features/: __init__.py  pipeline.py  technical.py
src/firebot/metrics/: __init__.py  calculators.py  engine.py  exporters.py  trade_store.py
src/firebot/ml/: __init__.py  feature_store.py  strategy.py  transformer_strategy.py  versioning.py
src/firebot/parallel/: __init__.py  actor.py  runner.py
src/firebot/strategies/: __init__.py  base.py  momentum.py  registry.py
src/firebot/visualization/: __init__.py  charts.py
src/firebot/visualization/grafana/: __init__.py  dashboard.py
tests/: __init__.py
tests/unit/: __init__.py  test_aggregation.py  test_backtesting.py  test_data_sources.py  test_execution.py  test_exporters.py  test_features.py  test_forward.py  test_grafana.py  test_metrics.py  test_ml.py  test_models.py  test_parallel.py  test_strategy.py  test_visualization.py
